--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -140,41 +140,6 @@ nav:
   - Learning:
       - Learning Overview: education/index.md
       - Webinars: education/webinar-program/overview.md
-      - Old Dojo (for reference):
-          - Dojo Introduction: getting-started/dojo/index.md
-          - Day 1:
-              - Egeria Introduction: getting-started/dojo/egeria-dojo-day-1-1-introduction.md
-              - Egeria Project Introduction: getting-started/dojo/egeria-dojo-day-1-2-project-introduction.md
-              - Running Egeria:
-                - Overview: getting-started/dojo/egeria-dojo-day-1-3-running-egeria.md
-                - Platform Setup and Configuration:
-                  - Overview: getting-started/dojo/egeria-dojo-day-1-3-1-platform-set-up-and-configuration.md
-                  - Prerequisites: getting-started/dojo/egeria-dojo-day-1-3-1-1-platform-set-up-prerequisites.md
-                  - Configuring the Platform: getting-started/dojo/egeria-dojo-day-1-3-1-2-configuring-the-platform.md
-                  - Confiiguring a Server: getting-started/dojo/egeria-dojo-day-1-3-1-3-configuring-a-server.md
-                - Running Metadata Access Servers:
-                  - Overview: getting-started/dojo/egeria-dojo-day-1-3-2-running-metadata-servers.md
-                  - Starting Server: getting-started/dojo/egeria-dojo-day-1-3-2-1-starting-the-server.md
-                  - Calling Server API: getting-started/dojo/egeria-dojo-day-1-3-2-2-calling-server-api.md
-                  - Working with Archives: getting-started/dojo/egeria-dojo-day-1-3-2-3-working-with-archives.md
-                  - Second Server: getting-started/dojo/egeria-dojo-day-1-3-2-4-second-server.md
-                - Running Metadata Ecosystems:
-                  - Overview: getting-started/dojo/egeria-dojo-day-1-3-3-running-metadata-ecosystems.md
-                  - Running User Interfaces: getting-started/dojo/egeria-dojo-day-1-3-3-1-running-ui.md
-                  - Running Governance Servers: getting-started/dojo/egeria-dojo-day-1-3-3-2-running-governance-servers.md
-                  - Running Kubernetes and Labs: getting-started/dojo/egeria-dojo-day-1-3-3-3-kubernetes-and-labs.md
-              - Participating in the Community: getting-started/dojo/egeria-dojo-day-1-4-participating-in-the-community.md
-          - Day 2:
-              - Open Source Philosophy: getting-started/dojo/egeria-dojo-day-2-1-open-source-philosophy.md
-              - Tools for Contributors: getting-started/dojo/egeria-dojo-day-2-2-tools-for-contributors.md
-              - Contributing to Egeria: getting-started/dojo/egeria-dojo-day-2-3-contribution-to-egeria.md
-              - Type of Contribution: getting-started/dojo/egeria-dojo-day-2-4-types-of-contribution.md
-              - Becoming a Contributor: getting-started/dojo/egeria-dojo-day-2-5-becoming-a-contributor.md
-          - Day 3:
-              - Becoming an Advocate: getting-started/dojo/egeria-dojo-day-3-1-becoming-an-advocate.md
-              - Becoming a Maintainer: getting-started/dojo/egeria-dojo-day-3-2-becoming-a-maintainer.md
-              - Egeria Architecture: getting-started/dojo/egeria-dojo-day-3-3-egeria-architecture.md
-              - Egeria Social: getting-started/dojo/egeria-dojo-day-3-4-egeria-social.md
       - Dojo (Jan 2022):
           - Dojo Overview: education/egeria-dojo/index.md
           - Running Egeria Day :
@@ -207,6 +172,41 @@ nav:
       - Scenarios:
           - Data Manager Integration: scenarios/data-manager-integration/overview.md
           - File Lineage: scenarios/file-lineage/overview.md
+      - Old Dojo (deprecated):
+            - Dojo Introduction: getting-started/dojo/index.md
+            - Day 1:
+                  - Egeria Introduction: getting-started/dojo/egeria-dojo-day-1-1-introduction.md
+                  - Egeria Project Introduction: getting-started/dojo/egeria-dojo-day-1-2-project-introduction.md
+                  - Running Egeria:
+                        - Overview: getting-started/dojo/egeria-dojo-day-1-3-running-egeria.md
+                        - Platform Setup and Configuration:
+                              - Overview: getting-started/dojo/egeria-dojo-day-1-3-1-platform-set-up-and-configuration.md
+                              - Prerequisites: getting-started/dojo/egeria-dojo-day-1-3-1-1-platform-set-up-prerequisites.md
+                              - Configuring the Platform: getting-started/dojo/egeria-dojo-day-1-3-1-2-configuring-the-platform.md
+                              - Confiiguring a Server: getting-started/dojo/egeria-dojo-day-1-3-1-3-configuring-a-server.md
+                        - Running Metadata Access Servers:
+                              - Overview: getting-started/dojo/egeria-dojo-day-1-3-2-running-metadata-servers.md
+                              - Starting Server: getting-started/dojo/egeria-dojo-day-1-3-2-1-starting-the-server.md
+                              - Calling Server API: getting-started/dojo/egeria-dojo-day-1-3-2-2-calling-server-api.md
+                              - Working with Archives: getting-started/dojo/egeria-dojo-day-1-3-2-3-working-with-archives.md
+                              - Second Server: getting-started/dojo/egeria-dojo-day-1-3-2-4-second-server.md
+                        - Running Metadata Ecosystems:
+                              - Overview: getting-started/dojo/egeria-dojo-day-1-3-3-running-metadata-ecosystems.md
+                              - Running User Interfaces: getting-started/dojo/egeria-dojo-day-1-3-3-1-running-ui.md
+                              - Running Governance Servers: getting-started/dojo/egeria-dojo-day-1-3-3-2-running-governance-servers.md
+                              - Running Kubernetes and Labs: getting-started/dojo/egeria-dojo-day-1-3-3-3-kubernetes-and-labs.md
+                  - Participating in the Community: getting-started/dojo/egeria-dojo-day-1-4-participating-in-the-community.md
+            - Day 2:
+                  - Open Source Philosophy: getting-started/dojo/egeria-dojo-day-2-1-open-source-philosophy.md
+                  - Tools for Contributors: getting-started/dojo/egeria-dojo-day-2-2-tools-for-contributors.md
+                  - Contributing to Egeria: getting-started/dojo/egeria-dojo-day-2-3-contribution-to-egeria.md
+                  - Type of Contribution: getting-started/dojo/egeria-dojo-day-2-4-types-of-contribution.md
+                  - Becoming a Contributor: getting-started/dojo/egeria-dojo-day-2-5-becoming-a-contributor.md
+            - Day 3:
+                  - Becoming an Advocate: getting-started/dojo/egeria-dojo-day-3-1-becoming-an-advocate.md
+                  - Becoming a Maintainer: getting-started/dojo/egeria-dojo-day-3-2-becoming-a-maintainer.md
+                  - Egeria Architecture: getting-started/dojo/egeria-dojo-day-3-3-egeria-architecture.md
+                  - Egeria Social: getting-started/dojo/egeria-dojo-day-3-4-egeria-social.md
   - Contributing:
       - Community Guide: guides/community.md
       - Project Operations: guides/project-operations.md
