--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -143,14 +143,15 @@ nav:
       - Dojo (Jan 2022):
           - Dojo Overview: education/egeria-dojo/index.md
           - Running Egeria Day :
-              - Introduction to 'Running Egeria' day: education/egeria-dojo/running-egeria/introduction.md
+              - Introduction to 'Running Egeria' day: education/egeria-dojo/running-egeria/running-egeria-intro.md
+              - Egeria introduction : education/egeria-dojo/running-egeria/egeria-egeria-introduction.md
               - Setup of the environment: education/egeria-dojo/running-egeria/setup-environment.md
               - Simple Install of Egeria : education/egeria-dojo/running-egeria/simple-install.md
               - Configuring and Operating a Server : education/egeria-dojo/running-egeria/configuring-and-operating-a-server.md
-              - Introduction to the Egeria UIs : education/egeria-dojo/running-egeria/ui-introduction.md
+              - Introduction to the Egeria UIs : education/egeria-dojo/running-egeria/ui-egeria-introduction.md
               - Coco Pharmaceuticals : education/egeria-dojo/running-egeria/coco-labs-environment.md
               - Using additional connectors : education/egeria-dojo/running-egeria/using-additional-connectors.md
-              - Summary of 'Running Egeria' day : education/egeria-dojo/running-egeria/day-summary.md
+              - Summary of 'Running Egeria' day : education/egeria-dojo/running-egeria/running-egeria-summary.md
           - Developer Day : education/egeria-dojo/developer/overview.md
           - Metadata Governance Day : education/egeria-dojo/metadata-governance.md
           - Egeria Contributor Day : education/egeria-dojo/egeria-contributor.md
@@ -175,8 +176,8 @@ nav:
       - Old Dojo (deprecated):
             - Dojo Introduction: getting-started/dojo/index.md
             - Day 1:
-                  - Egeria Introduction: getting-started/dojo/egeria-dojo-day-1-1-introduction.md
-                  - Egeria Project Introduction: getting-started/dojo/egeria-dojo-day-1-2-project-introduction.md
+                  - Egeria Introduction: getting-started/dojo/egeria-dojo-day-1-1-egeria-introduction.md
+                  - Egeria Project Introduction: getting-started/dojo/egeria-dojo-day-1-2-project-egeria-introduction.md
                   - Running Egeria:
                         - Overview: getting-started/dojo/egeria-dojo-day-1-3-running-egeria.md
                         - Platform Setup and Configuration:
