--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -225,7 +225,8 @@ nav:
                   - Release process: guides/contributor/release-process/index.md
                   - Egeria Core Release process: guides/contributor/release-process/egeria-core-release.md
                   - Egeria EcoSystem (React UI) Release process: guides/contributor/release-process/egeria-react-ui-release.md
-                  - Egeria charts Release process: guides/contributor/release-process/egeria-charts-release.md
+                  - Egeria Charts Release process: guides/contributor/release-process/egeria-charts-release.md
+                  - Egeria Release Notes Release process: guides/contributor/release-process/egeria-docs-release.md
           - Specific Guidance:
               - Programming Languages: guides/contributor/languages.md
               - Tools:
