--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -618,7 +618,7 @@ nav:
       - External Reference: concepts/external-reference.md
       - Favorite Collections: concepts/favorite-things-collection.md
       - Feedback: concepts/feedback.md
-      - Glossary Term: concepts/glossary-term.md
+      - Glossary Term: /principles/common-data-definitions/anatomy-of-a-glossary.md
       - GUID: concepts/guid.md
       - Governance Action: concepts/governance-action.md
       - Governance Action Engine: concepts/governance-action-engine.md
@@ -693,7 +693,10 @@ nav:
       - Practices: practices/index.md
       - Governance Basics: practices/governance-basics/overview.md
       - Governance Maturity Model: practices/maturity-model/overview.md
-      - Common Data Definitions: practices/common-data-definitions/overview.md
+      - Common Data Definitions:
+          - Overview: practices/common-data-definitions/overview.md
+          - Anatomy of a Glossary: practices/common-data-definitions/anatomy-of-a-glossary.md
+          - Open Metadata Implementation: practices/common-data-definitions/open-metadata-for-common-definitions.md
       - Governance Roles: practices/roles/overview.md
       - Digital Services: practices/digital-services/overview.md
       - Coco Pharmaceuticals:
