--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -82,7 +82,8 @@ nav:
                             - Data Files Monitor: connectors/integration/data-files-monitor-integration-connector.md
                             - Data Folder Monitor: connectors/integration/data-folder-monitor-integration-connector.md
                       - Topic Connectors:
-                            - Kafka Monitor Connector: connectors/integration/kafka-monitor-integration-connector.md
+                            - Kafka Topics Monitor Connector: connectors/integration/kafka-monitor-integration-connector.md
+                            - Kafka Topics Audit Connector: connectors/integration/kafka-topics-audit-integration-connector.md
                       - API Connectors:
                             - Open API Monitor Connector: connectors/integration/open-api-monitor-integration-connector.md
                       - Lineage Connectors:
@@ -297,8 +298,8 @@ nav:
               - Collections: types/0/0021-Collections.md
               - Locations: types/0/0025-Locations.md
               - Endpoints: types/0/0026-Endpoints.md
-              - Hosts and Platforms: types/0/0030-Hosts-and-Platforms.md
-              - Complex Hosts: types/0/0035-Complex-Hosts.md
+              - Operating Platforms: types/0/0030-Hosts-and-Platforms.md
+              - Hosts: types/0/0035-Complex-Hosts.md
               - Storage: types/0/0036-Storage.md
               - Software Server Platforms: types/0/0037-Software-Server-Platforms.md
               - Software Servers: types/0/0040-Software-Servers.md
@@ -307,7 +308,7 @@ nav:
               - Servers and Assets: types/0/0045-Servers-and-Assets.md
               - Applications and Processes: types/0/0050-Applications-and-Processes.md
               - Data Processing Engines: types/0/0055-Data-Processing-Engines.md
-              - Asset Managers: types/0/0056-Resource-Managers.md
+              - Resource Managers: types/0/0056-Resource-Managers.md
               - Software Services: types/0/0057-Software-Services.md
               - Networks and Gateways: types/0/0070-Networks-and-Gateways.md
               - Cloud Platforms and Services: types/0/0090-Cloud-Platforms-and-Services.md
