--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -262,6 +262,7 @@ nav:
       - Release Notes:
         - Latest Release: release-notes/latest.md
         - Next Release: release-notes/next.md
+        - v3.8: release-notes/3-8.md
         - v3.7: release-notes/3-7.md
         - v3.6: release-notes/3-6.md
         - v3.5: release-notes/3-5.md
